add get method for health.stat
